add package.json props, fix tests, fix build scripts

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,23 @@
 {
+  "env": {
+    "test": {},
+    "development": {
+      "ignore": [
+        "**/*.test.js",
+        "**/__mocks__"
+      ]
+    },
+    "production": {
+      "ignore": [
+        "**/*.test.js",
+        "**/__mocks__"
+      ]
+    }
+  },
   "presets": [
     ["@babel/preset-env", {
       "targets": {
-        "node": true
+        "node": "current"
       }
     }],
     "@babel/preset-flow"
